--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
     <script></script>
   </head>
   <body>
-    <a href = "/auth/google"><button>login with google</button></a><br/>
+    <a href = "/oauth/google"><button>login with google</button></a><br/>
     <a href = "/auth/login"><button>login</button></a><br/>
     <a href = "/signup"><button>sign up </button></a><br/>
   </body>
