logout feature added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
   <body>
     <img src = '<%= userimage%>'style="width:75px; height:75px"/></br> 
     <h3>logged in as : <%= username%></h1> 
-    <a href = "/auth/logout"><button>logout</button></a><br/>
+    <a href = "/logout"><button>logout</button></a><br/>
     <h2>All user list : </h2>
     <% if(!users||users.length <=0){%>
     <h3>No User </h3>
