--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,12 +2,23 @@
 <html>
   <head>
     <title>login</title>
-
-    <script></script>
   </head>
   <body>
-    <a href = "/oauth/google"><button>login with google</button></a><br/>
-    <a href = "/auth/login"><button>login</button></a><br/>
-    <a href = "/signup"><button>sign up </button></a><br/>
+    
+    <% if(message.length > 0){ %>
+    <div style="color : red;"><%= message %></div>
+    <% } %>
+
+    <form action = "/login" method = "post">
+      <div>
+          <label>Email : </label> <input type = "email" name = "email"/>
+      </div>
+      <div>
+          <label>Password : </label> <input type = "password" name = "password"/>
+      </div>
+      <button type = "submit" >Login</button>
+      <p>Need an account?<a href = "/signup">Signup</a>
+      <p>Or go<a href = "/">home</a>.</p>
+    </form>
   </body>
 </html>
